--- a/PersonalQuiz/Stroryboards/Base.lproj/Main.storyboard
+++ b/PersonalQuiz/Stroryboards/Base.lproj/Main.storyboard
@@ -331,6 +331,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="infoLabel" destination="rdC-v4-bo6" id="fGb-lh-6wH"/>
+                        <outlet property="resultLabel" destination="n7N-rN-iBL" id="PHu-nN-jPR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ba1-zM-TdW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
